--- a/package.json
+++ b/package.json
@@ -1,42 +1,48 @@
 {
-  "name": "react-auto-scroll-table",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "watch": "rm -r dist && rollup -c -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm dist/* && rollup -c",
-    "link-all": "npm run link-pkg && npm run link-react",
-    "link-pkg": "npm link && cd demo-app && npm link react-auto-scroll-table",
-    "link-react": "npm link ./demo-app/node_modules/react ./demo-app/node_modules/react-dom",
-    "unlink-all": "npm run unlink-pkg && npm run unlink-react",
-    "unlink-pkg": "cd demo-app && npm unlink --no-save react-auto-scroll-table && cd .. && npm unlink",
-    "unlink-react": "npm unlink react && npm link react-dom"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
+  "name": "react-auto-scroll-table-test",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "rollup": "^2.79.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "react": "^18.2.0",
+    "react-auto-scroll-table": "file:../react-auto-scroll-table",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
-  "peerDependencies": {
-    "react-dom": "^18.2.0"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "link-pkg": "npm link react-auto-scroll-table"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "workspaces":[
+    "react-auto-scroll-table"
+  ]
 }
