--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           node-version: '19'
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+        
       - name: Checkout
         uses: actions/checkout@v4
           
@@ -46,14 +49,16 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: 'build'
       
       - name: Deploy to GitHub Pages
         id: deployment
