--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-auto-scroll-table-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jamiebeverley.github.io/react-auto-scroll-table/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,7 +12,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
-    "react-auto-scroll-table": "file:../react-auto-scroll-table",
+    "react-auto-scroll-table": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -42,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "workspaces":[
+  "workspaces": [
     "react-auto-scroll-table"
   ]
 }
