--- a/react-auto-scroll-table/package.json
+++ b/react-auto-scroll-table/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/src/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "watch": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1",
